tests/ui/macros/macro-use-bad-args-2.stderr
error[E0565]: malformed `macro_use` attribute input
  --> $DIR/macro-use-bad-args-2.rs:3:1
   |
LL | #[macro_use(foo="bar")]
   | ^^^^^^^^^^^^^^^------^^
   |                |
   |                didn't expect any arguments here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[macro_use(foo="bar")]
LL + #[macro_use(name1, name2, ...)]
   |
LL - #[macro_use(foo="bar")]
LL + #[macro_use]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0565`.
